--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "netlify-identity-widget": "^1.9.2",
     "next": "^13.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
