--- a/package.json
+++ b/package.json
@@ -14,10 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/ibm-plex-serif": "^4.5.12",
+    "@fontsource/roboto": "^4.5.8",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
+    "@next/font": "^13.0.4",
+    "gray-matter": "^4.0.3",
+    "js-yaml": "^4.1.0",
     "netlify-identity-widget": "^1.9.2",
     "next": "^13.0.4",
+    "next-mdx-remote": "^4.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rooks": "^7.4.2",
+    "yaml-loader": "^0.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.2",
