--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -89,6 +89,9 @@ collections:
       - label: "Title"
         name: "title"
         widget: "string"
+      - label: "Description"
+        name: "description"
+        widget: "text"
       - label: "Created On"
         name: "date"
         widget: "datetime"
