--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -75,7 +75,7 @@ collections:
     slug: "{{slug}}"
     identifier_field: slug
     summary: "{{title}}"
-    sortable_fields: ['slug', 'date', 'priority']
+    sortable_fields: ['priority', 'slug', 'date']
     fields:
       - label: "Slug"
         name: "slug"
