--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -74,7 +74,7 @@ collections:
     create: true
     slug: "{{slug}}"
     identifier_field: slug
-    summary: "{{title}}"
+    summary: "{{priority}} - {{title}}"
     sortable_fields: ['priority', 'slug', 'date']
     fields:
       - label: "Slug"
