Update Config “general”

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "",
+  "base_url": "https://zesty-pavlova-a7f461.netlify.app/",
   "site_title": "Frances Richens",
   "site_description": "A preview of my work",
   "site_introduction": "Welcome to my site! I'm looking for work, please give me a job.",
