--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-  "base_url": "",
+  "base_url": "https://zesty-pavlova-a7f461.netlify.app/",
   "site_title": "Frances Richens",
+  "author": "Frances Richens",
   "site_description": "A preview of my work",
   "site_introduction": "Welcome to my site! I'm looking for work, please give me a job.",
   "site_keywords": [
@@ -14,6 +15,5 @@
       "keyword": "freelance"
     }
   ],
-  "posts_per_page": 5,
   "linkedin_account_url": "my-account"
 }
