--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "base_url": "https://zesty-pavlova-a7f461.netlify.app/",
   "site_title": "Frances Richens",
-  "author": "Frances Richens",
+  "site_author": "Frances Richens",
   "site_description": "A preview of my work",
   "site_introduction": "Welcome to my site! I'm looking for work, please give me a job.",
   "site_keywords": [
