Update Config “general”

--- a/config.json
+++ b/config.json
@@ -15,5 +15,5 @@
       "keyword": "freelance"
     }
   ],
-  "linkedin_account_url": "my-account"
+  "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/"
 }
