refactor: adjust site config field names

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -23,15 +23,13 @@ collections:
             hint: "Do not enter the trailing slash of the URL"
           - label: "Site title"
             name: "site_title"
+            hint: "Displays in search results and on the browser tab"
             widget: "string"
-          - label: "Author"
+          - label: "Site author"
             name: "site_author"
             widget: "string"
           - label: "Site description"
             name: "site_description"
-            widget: "string"
-          - label: "Site introduction"
-            name: "site_introduction"
             widget: "string"
           - label: "Site keywords"
             name: "site_keywords"
@@ -41,6 +39,9 @@ collections:
               label: Keyword
               name: keyword
               widget: "string"
+          - label: "Introduction"
+            name: "introduction"
+            widget: "string"
           - label: "LinkedIn account"
             name: "linkedin_account_url"
             widget: "string"
