--- a/config.json
+++ b/config.json
@@ -3,7 +3,6 @@
   "site_title": "Frances Richens",
   "site_author": "Frances Richens",
   "site_description": "A preview of my work",
-  "site_introduction": "Welcome to my site! I'm looking for work, please give me a job.",
   "site_keywords": [
     {
       "keyword": "editing"
@@ -15,5 +14,6 @@
       "keyword": "freelance"
     }
   ],
+  "introduction": "Welcome to my site! I'm looking for work, please give me a job.",
   "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/"
 }
