refactor: restructure config fields

--- a/config.json
+++ b/config.json
@@ -1,19 +1,21 @@
 {
   "base_url": "https://zesty-pavlova-a7f461.netlify.app/",
-  "site_title": "Frances Richens",
-  "site_author": "Frances Richens",
-  "site_description": "A preview of my work",
-  "site_keywords": [
-    {
-      "keyword": "editing"
-    },
-    {
-      "keyword": "portfolio"
-    },
-    {
-      "keyword": "freelance"
-    }
-  ],
+  "site_metadata": {
+    "site_title": "Frances Richens",
+    "site_author": "Frances Richens",
+    "site_description": "A preview of my work",
+    "site_keywords": [
+      {
+        "keyword": "editing"
+      },
+      {
+        "keyword": "portfolio"
+      },
+      {
+        "keyword": "freelance"
+      }
+    ]
+  },
   "introduction": "Welcome to my site! I'm looking for work, please give me a job.",
   "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/"
 }
