feat: set metadata options block as collapsed by default

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -24,6 +24,7 @@ collections:
         - label: "Site metadata"
           name: "site_metadata"
           widget: "object"
+          collapsed: true
           fields:
           - label: "Site title"
             name: "site_title"
