feat: add new config fields

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -47,9 +47,21 @@ collections:
         - label: "Heading"
           name: "heading"
           widget: "string"
+          hint: "On every page"
         - label: "Introduction"
           name: "introduction"
           widget: "string"
+          hint: "On your /home page"
+        - label: "About"
+          name: "about"
+          widget: "string"
+          hint: "On your /about page"
+        - label: "Profile picture"
+          name: "profile"
+          widget: "image"
+          allow_multiple: false
+          media_folder: "/public/images"
+          hint: "On your /about page"
         - label: "LinkedIn account"
           name: "linkedin_account_url"
           widget: "string"
