feat: update config

--- a/config.json
+++ b/config.json
@@ -18,6 +18,6 @@
   },
   "heading": "Frances Richens",
   "introduction": "Welcome to my site! I'm looking for work, please give me a job.",
-  "about": "Hello, I'm Frances and I'd like to write in exchange for your money.",
+  "about": "Hello, I'm Frances and I'd like to write in exchange for your money. Get in touch today!",
   "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/"
 }
