Update Meta “tags”

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -7,3 +7,7 @@ tags:
     name: Review
   - slug: arts-culture
     name: Arts & Culture
+  - slug: marketing
+    name: Marketing copy
+  - slug: Food
+    name: Food
