--- a/config.json
+++ b/config.json
@@ -17,8 +17,8 @@
     ]
   },
   "heading": "Frances Richens",
-  "introduction": "Welcome to my site! I'm looking for work, please give me a job.",
-  "about": "Hello, I'm Frances and I'd like to write in exchange for your money. Get in touch today!",
+  "introduction": "Content writer & editor.",
+  "about": "I am a writer and editor, specialising in arts, cultural, food, travel and lifestyle content. I have over 10 years experience in journalism, editing, communications and marketing.  Before going freelance, I held senior writing and editing positions within B2B and consumer publications, as well as nonprofit arts organisations. I have been published in The Guardian, Daily Telegraph, ArtsProfessional, Time Out and Mouth London.  This website showcases a select portfolio of my journalistic and marketing writing. My CV can be downloaded here.   I’m a UK national, currently based in Canada and looking for remote, contract jobs.",
   "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/",
   "profile": "/images/frances-richens-headshot.jpeg"
 }
