--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/ibm-plex-serif": "^4.5.12",
     "@fontsource/roboto": "^4.5.8",
+    "@mdx-js/react": "^2.2.1",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@next/font": "^13.0.4",
