--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@next/font": "^13.0.4",
+    "framer-motion": "^8.1.5",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
     "netlify-identity-widget": "^1.9.2",
