feat: add editable text on contact page.

--- a/config.json
+++ b/config.json
@@ -19,6 +19,8 @@
   "heading": "Frances Richens",
   "introduction": "Writer and editor",
   "about": "I am a writer and editor, specialising in arts, culture, food, travel and lifestyle content. I have over 10 years of experience in journalism, editing, communications and marketing.\n\nBefore going freelance, I held senior writing and editing positions within B2B and consumer publications, as well as nonprofit arts organisations. I have been published in The Guardian, Daily Telegraph, ArtsProfessional, Time Out and Mouth London.\n\nThis website showcases a select portfolio of my journalistic and marketing writing. [My CV can be downloaded here.](https://drive.google.com/file/d/15o-Mlon8bL2mPjFCuJmMoeI5jeez9os5/view?usp=sharing)\n\nI’m a UK national, currently based in Canada and looking for remote, contract jobs.",
+  "contact": "If you want to get in touch, please email me at <a href='mailto:farichenswrites@gmail.com' target='_blank' >farichenswrites@gmail.com</a>, message me on <a href='https://www.linkedin.com/in/frances-richens-2246a429/' target='_blank' >my LinkedIn</a>, or use the contact form below.",
+  "email_address": "farichenswrites@gmail.com",
   "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/",
   "profile": "/images/frances-richens-headshot.jpeg"
 }
