fix: add a minimum requirement to tags field

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "base_url": "https://zesty-pavlova-a7f461.netlify.app/",
+  "base_url": "https://francesrichens.com/",
   "site_metadata": {
     "site_title": "Frances Richens",
     "site_author": "Frances Richens",
