--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -111,6 +111,7 @@ collections:
       - label: 'Slug'
         name: 'slug'
         widget: 'string'
+        hi
       - label: 'Priority'
         name: 'priority'
         widget: 'number'
@@ -133,6 +134,7 @@ collections:
         name: 'tags'
         widget: list
         summary: '{{fields.tag}}'
+        min: 1
         field:
           label: Tag
           name: tag
