Update Config “general”

--- a/config.json
+++ b/config.json
@@ -20,7 +20,7 @@
   },
   "profile": "/images/frances-richens-headshot.jpeg",
   "contact_text": "If you want to get in touch, please email me at farichenswrites@gmail.com or use the contact form below.",
-  "about": "I am a writer and editor, specialising in arts, culture, food, travel and lifestyle content. I have over 10 years of experience in journalism, editing, communications and marketing.\n\nBefore going freelance, I held senior writing and editing positions within B2B and consumer publications, as well as nonprofit arts organisations. I have been published in The Guardian, Daily Telegraph, ArtsProfessional, Time Out and Mouth London.\n\nThis website showcases a select portfolio of my journalistic and marketing writing. [My CV can be downloaded here.](https://drive.google.com/file/d/1CBEDOmk1hTnBI3heGriHPqBVywNdC1uS/view?usp=sharing)\n\nI’m a UK national, currently based between Canada and the UK.",
+  "about": "I am a writer and communications specialist with over 10 years of experience in journalism, editing, communications and marketing.\n\nBefore going freelance, I held senior editorial and communications positions within B2B and consumer publications, as well as nonprofit arts organisations. I have been published in The Guardian, Daily Telegraph, ArtsProfessional, Time Out and Mouth London.\n\nThis website showcases a select portfolio of my journalistic and marketing writing. Alongside my freelance writing, I offer services in communications and grant writing to artists and arts organisations.",
   "email_address": "farichenswrites@gmail.com",
   "introduction": "Writer and communications specialist",
   "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/"
