Update Config “general”

--- a/config.json
+++ b/config.json
@@ -22,6 +22,6 @@
   "contact_text": "If you want to get in touch, please email me at frances.a.richens@gmail.com or use the contact form below.",
   "about": "I am a writer and communications specialist with over 10 years of experience in journalism, editing, communications and marketing. I’m interested in questions of collective and individual identity, journeys and food culture. \n\nBefore going freelance, I held senior editorial and communications positions within B2B and consumer publications, as well as nonprofit arts organisations. I have been published in The Guardian, Daily Telegraph, ArtsProfessional, Time Out and Mouth London.\n\nAlongside my freelance writing, I offer services in communications and grant writing to artists and arts organisations. Find out more about my services [here](https://francesrichens.co.uk/). \n\nThis website showcases a select portfolio of my journalistic writing.",
   "email_address": "frances.a.richens@gmail.com",
-  "introduction": "Writer, journalist & communications specialist",
+  "introduction": "Writer & communications specialist",
   "linkedin_account_url": "https://www.linkedin.com/in/frances-richens-2246a429/"
 }
